--- a/frontend/src/components/AddingRoom.css
+++ b/frontend/src/components/AddingRoom.css
@@ -19,6 +19,7 @@
         align-items: flex-start;
         margin-top: 20px;
         padding: 20px;
+        margin-bottom: 100px;
     }
     
 }
