--- a/frontend/src/components/Automations/Automation.module.css
+++ b/frontend/src/components/Automations/Automation.module.css
@@ -31,6 +31,7 @@
     .pageContainer {
         margin-left: 0;
         padding: 20px 0 0 30px;
+        margin-bottom: 100px;
     }
 }
 
